--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "eslint-config-next": "13.4.8",
     "next": "^13.4.8",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "styled-components": "^6.0.4"
   }
 }
