--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "next": "^13.4.8",
-    "next-auth": "^4.22.1",
+    "next-auth": "^4.22.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.8.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "styled-components": "^6.0.4"
