--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.9.3",
     "bootstrap": "^5.3.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
