--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@tanstack/react-table": "^8.9.3",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
-    "next": "^13.4.8",
-    "next-auth": "^4.22.3",
+    "next": "^13.4.13",
+    "next-auth": "^4.22.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.8.0",
