--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "lint": "^0.8.19",
     "next": "^13.4.8",
     "next-auth": "^4.22.3",
     "react": "^18.2.0",
